langtools/test/tools/javac/annotations/typeAnnotations/failures/AnnotationVersion.out
AnnotationVersion.java:10:43: compiler.err.type.annotations.not.supported.in.source: 1.6
1 error
